--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "react-dom": "18.1.0",
     "react-hook-form": "^7.32.1",
     "react-icons": "^4.4.0",
+    "react-query": "^3.39.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/faker": "5.5.3",
     "@types/node": "^17.0.38",
     "@types/react": "^18.0.10",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
+    "faker": "^5.5.3",
     "miragejs": "^0.1.45",
     "typescript": "^4.7.2"
   }
